--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -21,7 +21,7 @@ $header-height: 71px;
   &.header-jstor {
     height: 90px;
 
-    .logo {
+    .logo-jstor {
       top: 12px;
 
       img {
